src/main/java/com/revolvingmadness/testing/language/errors/MethodNotImplementedError.java
package com.revolvingmadness.testing.language.errors;

public class MethodNotImplementedError extends Error {
    public MethodNotImplementedError(String message) {
        super(message);
    }
}
